# img-analysis

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt  installPrerequisites
include/: edgedetect.hpp  filters.hpp  fouriertransform.hpp  registration.hpp  tools.hpp
src/: Compare_ShiftRegistration.cpp  Demo_DFT.cpp  Demo_EdgeDetector.cpp  Demo_ImageRegistration_ECC.cpp  Demo_ImageRegistration_FMT.cpp  Demo_ImageRegistration_FeaturesBased.cpp  Demo_Registration.cpp  test_registration.cpp
src/EdgeDetector/: CannyDeriche.cpp
src/Filter/: Deriche.cpp
src/ImageRegistration/: ECC.cpp  FeaturesBased.cpp  FourierMellin.cpp  Registration.cpp
src/Shared/: FourierTransform.cpp  Tools.cpp
src/gui/: ROIView.cpp  ROIView.hpp
